# gismo

./: CMakeLists.txt
.github/workflows/: build_wheels.yml
cmake/: FindMUMPS.cmake  FindRapidXML.cmake  gsInstall.cmake  gsLibrary.cmake  gsOptions.cmake
doc/: thbSplineBasis_example.dox
examples/: domains_example.cpp  gsAdaptiveMeshing_example.cpp  gsExpressions_test.cpp  gsMappedSpline_example.cpp  kirchhoff-Love_example.cpp  pMultiGrid_example.cpp  paraview_example.cpp  poisson2_example.cpp  precision_example.cpp  quadrature_example.cpp  sparseSolvers_example.cpp
filedata/pde/: surfacepoisson_torus_bvp.xml
optional/gsHLBFGS/: gsHLBFGS.h
optional/gsOpennurbs/: CMakeLists.txt  gsReadOpenNurbs.cpp  gsWriteOpenNurbs.h  gsWriteOpenNurbs.hpp
optional/gsOptim/: gsOptim.h
optional/gsParasolid/: gsWriteParasolid.hpp
optional/gsSpectra/: gsSpectra.h
optional/gsSpectra/unittests/: gsSpectra_test.cpp
optional/gsXBraid/examples/: gsXBraidMultigrid.h
pkg/env/: gismo.yaml
src/: gismo.h
src/gsAssembler/: gsAdaptiveMeshing.hpp  gsAdaptiveRefUtils.h  gsAssembler.h  gsBiharmonicExprAssembler.hpp  gsDirichletValues.h  gsExprAssembler.h  gsExprEvaluator.h  gsExprHelper.h  gsExpressions.h  gsGaussRule.hpp  gsPoissonAssembler.h  gsQuadrature.h  gsRemapInterface.hpp
src/gsCore/: gsBasis.h  gsBasis.hpp  gsBoundary.h  gsConfig.h.in  gsDebug.h  gsExport.h.in  gsField.hpp  gsForwardDeclarations.h  gsFuncCoordinate.h  gsFuncData.h  gsFunction.hpp  gsGeometry.h  gsGeometry.hpp  gsLinearAlgebra.h  gsMultiBasis.h  gsMultiPatch.hpp  gsRationalBasis.h
src/gsDomain/: gsCompositeDomain.h  gsDomain.h  gsDomainIterator.h  gsHDomain.h  gsHDomainBoundaryIterator.h  gsHDomainIterator.h  gsHTree.h  gsKnotDomainIterator.h  gsPointDomainIterator.h  gsTensorDomain.h  gsTensorDomainBoundaryIterator.h  gsTensorDomainIterator.h
src/gsHSplines/: gsAABB.h  gsHBSpline.h  gsHBox.h  gsHBox.hpp  gsHDomain.h  gsHDomainBoundaryIterator.h  gsHDomainIterator.h  gsHTensorBasis.h  gsHTensorBasis.hpp  gsTHBSpline.h  gsTHBSpline.hpp  gsTHBSplineBasis.hpp
src/gsIO/: gsCmdLine.cpp  gsCmdLine.h  gsCsv.h  gsFileData.hpp  gsIOUtils.h  gsParaviewUtils.h  gsParaviewUtils.hpp  gsXml.h  gsXmlGenericUtils.hpp
src/gsMSplines/: gsMappedBasis.h  gsMappedBasis.hpp  gsMappedSingleBasis.h  gsMappedSpline.h  gsWeightMapper.h  gsWeightMapper.hpp  gsWeightMapperUtils.h
src/gsMatrix/: Adjugate.h  BlockDiag.h  BlockTranspose.h  VecAsSymmMatrix.h  gsAsMatrix.h  gsEigenDeclarations.h  gsFiberMatrix.h  gsMatrix.h  gsMatrixBlockView.h  gsSparseMatrix.h  gsSparseSolver.h  gsSparseVector.h  gsVector.h
src/gsMesh2/: gsSurfMesh.h
src/gsModeling/: gsBarrierCore.h  gsFitting.hpp  gsLineSegment.h  gsParametrization.hpp  gsPlanarDomain.h  gsSolidHeVertex.h  gsTemplate.h
src/gsNurbs/: gsBSpline.hpp  gsBSplineBasis.h  gsKnotVector.h  gsKnotVector.hpp  gsNurbs.h  gsNurbsCreator.hpp  gsTensorBSplineBasis.hpp  gsTensorNurbs.h
src/gsOptimizer/: gsGradientDescent.h  gsLevenbergMarquardt.h
src/gsTensor/: gsBreaksIterator.h  gsTensorBasis.h  gsTensorBasis.hpp  gsTensorDomainBoundaryIterator.h  gsTensorDomainIterator.h
src/gsUtils/gsMesh/: gsVertex.h
